test/badLhs3.slq
def main(){
	(x,y):=(2,3);
	(x,y)[0]=3; /// error
}
